Issue #2990969 by mglaman: Checkout steps take up too much screen space on small viewports

--- a/assets/scss/commerce/_commerce.scss
+++ b/assets/scss/commerce/_commerce.scss
@@ -7,6 +7,7 @@
   max-width: 560px;
 }
 
+.path-checkout .page-header,
 .path-checkout .breadcrumb {
   display: none;
 }
